gen/CongParser.java
// Generated from /Users/haschker/CLionProjects/masterthesis-transpiler/grammar/Cong.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CongParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, CONCEPT=16, 
		FUNCTION=17, NAMESPACE=18, DESCRIPTION=19, GENERICIMPL=20, REQUIRES=21, 
		LBRACE=22, RBRACE=23, VARARGS=24, REAL=25, BOOL=26, NUMBER=27, STRING=28, 
		IDENTIFIER=29, WHITESPACE=30, COMMENT=31, LINE_COMMENT=32, OTHER=33;
	public static final int
		RULE_translationUnit = 0, RULE_stmnt = 1, RULE_conceptDefinitionStmnt = 2, 
		RULE_conceptDefinitionBases = 3, RULE_namespaceStmnt = 4, RULE_functionStmnt = 5, 
		RULE_functionBody = 6, RULE_functionBodyStmnt = 7, RULE_parameterList = 8, 
		RULE_parameter = 9, RULE_expression = 10, RULE_placeholderOrQualifiedId = 11, 
		RULE_conceptPlaceholder = 12, RULE_qualifiedIdentifier = 13, RULE_literal = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"translationUnit", "stmnt", "conceptDefinitionStmnt", "conceptDefinitionBases", 
			"namespaceStmnt", "functionStmnt", "functionBody", "functionBodyStmnt", 
			"parameterList", "parameter", "expression", "placeholderOrQualifiedId", 
			"conceptPlaceholder", "qualifiedIdentifier", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "':'", "')'", "';'", "'&'", "'->'", "','", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'<'", "'>'", "'::'", "'concept'", "'fun'", "'namespace'", 
			"'description'", "'generic'", "'requires'", "'{'", "'}'", "'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "CONCEPT", "FUNCTION", "NAMESPACE", "DESCRIPTION", 
			"GENERICIMPL", "REQUIRES", "LBRACE", "RBRACE", "VARARGS", "REAL", "BOOL", 
			"NUMBER", "STRING", "IDENTIFIER", "WHITESPACE", "COMMENT", "LINE_COMMENT", 
			"OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cong.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CongParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TranslationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CongParser.EOF, 0); }
		public List<StmntContext> stmnt() {
			return getRuleContexts(StmntContext.class);
		}
		public StmntContext stmnt(int i) {
			return getRuleContext(StmntContext.class,i);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterTranslationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitTranslationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitTranslationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 458752L) != 0)) {
				{
				{
				setState(30);
				stmnt();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmntContext extends ParserRuleContext {
		public ConceptDefinitionStmntContext conceptDefinitionStmnt() {
			return getRuleContext(ConceptDefinitionStmntContext.class,0);
		}
		public NamespaceStmntContext namespaceStmnt() {
			return getRuleContext(NamespaceStmntContext.class,0);
		}
		public FunctionStmntContext functionStmnt() {
			return getRuleContext(FunctionStmntContext.class,0);
		}
		public StmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmnt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitStmnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmntContext stmnt() throws RecognitionException {
		StmntContext _localctx = new StmntContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmnt);
		try {
			setState(41);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONCEPT:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				conceptDefinitionStmnt();
				}
				break;
			case NAMESPACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				namespaceStmnt();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				functionStmnt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConceptDefinitionStmntContext extends ParserRuleContext {
		public Token name;
		public Token desc;
		public TerminalNode CONCEPT() { return getToken(CongParser.CONCEPT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(CongParser.IDENTIFIER, 0); }
		public TerminalNode DESCRIPTION() { return getToken(CongParser.DESCRIPTION, 0); }
		public ConceptDefinitionBasesContext conceptDefinitionBases() {
			return getRuleContext(ConceptDefinitionBasesContext.class,0);
		}
		public TerminalNode STRING() { return getToken(CongParser.STRING, 0); }
		public ConceptDefinitionStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conceptDefinitionStmnt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterConceptDefinitionStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitConceptDefinitionStmnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitConceptDefinitionStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConceptDefinitionStmntContext conceptDefinitionStmnt() throws RecognitionException {
		ConceptDefinitionStmntContext _localctx = new ConceptDefinitionStmntContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_conceptDefinitionStmnt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(CONCEPT);
			setState(44);
			((ConceptDefinitionStmntContext)_localctx).name = match(IDENTIFIER);
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(45);
				match(T__0);
				setState(46);
				match(DESCRIPTION);
				setState(47);
				match(T__1);
				setState(48);
				((ConceptDefinitionStmntContext)_localctx).desc = match(STRING);
				setState(49);
				match(T__2);
				}
			}

			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(52);
				conceptDefinitionBases();
				}
			}

			setState(55);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConceptDefinitionBasesContext extends ParserRuleContext {
		public List<QualifiedIdentifierContext> qualifiedIdentifier() {
			return getRuleContexts(QualifiedIdentifierContext.class);
		}
		public QualifiedIdentifierContext qualifiedIdentifier(int i) {
			return getRuleContext(QualifiedIdentifierContext.class,i);
		}
		public ConceptDefinitionBasesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conceptDefinitionBases; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterConceptDefinitionBases(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitConceptDefinitionBases(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitConceptDefinitionBases(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConceptDefinitionBasesContext conceptDefinitionBases() throws RecognitionException {
		ConceptDefinitionBasesContext _localctx = new ConceptDefinitionBasesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_conceptDefinitionBases);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(T__1);
			setState(58);
			qualifiedIdentifier();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(59);
				match(T__4);
				setState(60);
				qualifiedIdentifier();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamespaceStmntContext extends ParserRuleContext {
		public Token name;
		public TerminalNode NAMESPACE() { return getToken(CongParser.NAMESPACE, 0); }
		public TerminalNode LBRACE() { return getToken(CongParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CongParser.RBRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(CongParser.IDENTIFIER, 0); }
		public List<StmntContext> stmnt() {
			return getRuleContexts(StmntContext.class);
		}
		public StmntContext stmnt(int i) {
			return getRuleContext(StmntContext.class,i);
		}
		public NamespaceStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceStmnt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterNamespaceStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitNamespaceStmnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitNamespaceStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceStmntContext namespaceStmnt() throws RecognitionException {
		NamespaceStmntContext _localctx = new NamespaceStmntContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_namespaceStmnt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(NAMESPACE);
			setState(67);
			((NamespaceStmntContext)_localctx).name = match(IDENTIFIER);
			setState(68);
			match(LBRACE);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 458752L) != 0)) {
				{
				{
				setState(69);
				stmnt();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionStmntContext extends ParserRuleContext {
		public Token name;
		public QualifiedIdentifierContext type;
		public TerminalNode FUNCTION() { return getToken(CongParser.FUNCTION, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(CongParser.IDENTIFIER, 0); }
		public QualifiedIdentifierContext qualifiedIdentifier() {
			return getRuleContext(QualifiedIdentifierContext.class,0);
		}
		public FunctionStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionStmnt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterFunctionStmnt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitFunctionStmnt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitFunctionStmnt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionStmntContext functionStmnt() throws RecognitionException {
		FunctionStmntContext _localctx = new FunctionStmntContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionStmnt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(FUNCTION);
			setState(78);
			((FunctionStmntContext)_localctx).name = match(IDENTIFIER);
			setState(79);
			parameterList();
			setState(80);
			match(T__5);
			setState(81);
			((FunctionStmntContext)_localctx).type = qualifiedIdentifier();
			setState(82);
			functionBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionBodyContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(CongParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CongParser.RBRACE, 0); }
		public List<FunctionBodyStmntContext> functionBodyStmnt() {
			return getRuleContexts(FunctionBodyStmntContext.class);
		}
		public FunctionBodyStmntContext functionBodyStmnt(int i) {
			return getRuleContext(FunctionBodyStmntContext.class,i);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterFunctionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitFunctionBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitFunctionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(LBRACE);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3670016L) != 0)) {
				{
				{
				setState(85);
				functionBodyStmnt();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionBodyStmntContext extends ParserRuleContext {
		public FunctionBodyStmntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBodyStmnt; }
	 
		public FunctionBodyStmntContext() { }
		public void copyFrom(FunctionBodyStmntContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionGenericImplContext extends FunctionBodyStmntContext {
		public TerminalNode GENERICIMPL() { return getToken(CongParser.GENERICIMPL, 0); }
		public TerminalNode LBRACE() { return getToken(CongParser.LBRACE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CongParser.RBRACE, 0); }
		public FunctionGenericImplContext(FunctionBodyStmntContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterFunctionGenericImpl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitFunctionGenericImpl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitFunctionGenericImpl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionExpRequiresContext extends FunctionBodyStmntContext {
		public TerminalNode REQUIRES() { return getToken(CongParser.REQUIRES, 0); }
		public TerminalNode LBRACE() { return getToken(CongParser.LBRACE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CongParser.RBRACE, 0); }
		public FunctionExpRequiresContext(FunctionBodyStmntContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterFunctionExpRequires(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitFunctionExpRequires(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitFunctionExpRequires(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDescriptionContext extends FunctionBodyStmntContext {
		public TerminalNode DESCRIPTION() { return getToken(CongParser.DESCRIPTION, 0); }
		public TerminalNode LBRACE() { return getToken(CongParser.LBRACE, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CongParser.RBRACE, 0); }
		public FunctionDescriptionContext(FunctionBodyStmntContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterFunctionDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitFunctionDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitFunctionDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyStmntContext functionBodyStmnt() throws RecognitionException {
		FunctionBodyStmntContext _localctx = new FunctionBodyStmntContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionBodyStmnt);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DESCRIPTION:
				_localctx = new FunctionDescriptionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(DESCRIPTION);
				setState(94);
				match(LBRACE);
				setState(95);
				literal();
				setState(96);
				match(RBRACE);
				}
				break;
			case GENERICIMPL:
				_localctx = new FunctionGenericImplContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(GENERICIMPL);
				setState(99);
				match(LBRACE);
				setState(100);
				expression(0);
				setState(101);
				match(RBRACE);
				}
				break;
			case REQUIRES:
				_localctx = new FunctionExpRequiresContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				match(REQUIRES);
				setState(104);
				match(LBRACE);
				setState(105);
				expression(0);
				setState(106);
				match(RBRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitParameterList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitParameterList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(T__0);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(111);
				parameter();
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(112);
					match(T__6);
					setState(113);
					parameter();
					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(121);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public Token name;
		public PlaceholderOrQualifiedIdContext type;
		public TerminalNode IDENTIFIER() { return getToken(CongParser.IDENTIFIER, 0); }
		public PlaceholderOrQualifiedIdContext placeholderOrQualifiedId() {
			return getRuleContext(PlaceholderOrQualifiedIdContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CongListener ) ((CongListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CongVisitor ) return ((CongVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			((ParameterContext)_localctx).name = match(IDENTIFIER);
			setState(124);
			match(T__1);
			setState(125);
			((ParameterContext)_localctx).type = placeholderOrQualifiedId();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
